--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "modern-normalize": "^1.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.9.0",
